* Wed Dec 07 2016 Trevor Vaughan <tvaughan@onyxpoint.com> - 2.1.0-0
- Added a set of Data Types
  - Port (any of the below)
  - RandomPort (0)
  - PrivilegedPort (1-1024)
  - UnprivilegedPort (1025-65535)
- Added a simplib::lookup() function that returns a globally scoped variable if
  it exists before calling the traditional lookup() function.

* Tue Nov 29 2016 Nick Miller <nick.miller@onyxpoint.com> - 2.0.0-0
- Renamed the file containing the puppet_settings fact to deconflict with
  puppetlabs/puppetlabs-stdlib. They don't create any facts with the name
  `puppet_settings`, so this works for now.

* Mon Nov 21 2016 Chris Tessmer <chris.tessmer@onyxpoint.com> - 2.0.0-0
- Updated to compliance_markup version 2

* Wed Nov 16 2016 Trevor Vaughan <tvaughan@onyxpoint.com> - 2.0.0-0
- Rewrite the ``puppet_settings`` fact to fix several issues

* Fri Oct 14 2016 Liz Nemsick <lnemsick.simp@gmail.com> - 2.0.0-0
- Fix errors when validate_net_list uses regex strings and
  is validating IPv6.

* Thu Oct 13 2016 Nick Markowski <nmarkowski@keywcorp.com> - 2.0.0-0
- EL 7 machines now default nsswitch hosts to 'files','myhostname','dns'
  in an attempt to mitigate https://bugs.centos.org/view.php?id=10635

* Wed Oct 12 2016 Trevor Vaughan <tvaughan@onyxpoint.com> - 2.0.0-0
- Updated to use the version of 'simpcat' that does not conflict with
  'puppetlabs/concat'.
- Removed the 'has_clustering' fact since it is no longer used in SIMP
- Added a 'puppet_settings' fact that will provide a hash of *all* puppet
  settings on the client system.

* Tue Oct 11 2016 Lucas Yamanishi <lucas.yamanishi@onyxpoint.com> - 1.3.3-0
- Prior to this `named::resolv` made reference to `Service['named']`,
  causing errors in cases where the named servce was not called "named."
  This commit changes the reference to `Class['named']` to abstract out
  the service name and any other potential starup quirks.

* Thu Aug 25 2016 Trevor Vaughan <tvaughan@onyxpoint.com> - 1.3.1-0