@@ -1,2 +1,2 @@
 # Corresponds to the usual privileged port range
-type Simplib::PrivilegedPort = Integer[1,1024]
+type Simplib::DynamicPort = Integer[49152,65535]
