@@ -1,2 +1,2 @@
 # A valid port Type
-type Simplib::Port = Variant[Simplib::RandomPort, Simplib::PrivilegedPort, Simplib::UnprivilegedPort]
+type Simplib::Port = Variant[Simplib::RandomPort, Simplib::SystemPort, Simplib::UserPort, Simplib::DynamicPort]
