@@ -1,0 +1,2 @@
+# Corresponds to the usual privileged port range
+type Simplib::SystemPort = Integer[1,1024]
