@@ -1,2 +1,0 @@
-# Corresponds to the unprivileged port range
-type Simplib::UnprivilegedPort = Integer[1025,65535]
