@@ -1,0 +1,2 @@
+# Corresponds to the unprivileged port range
+type Simplib::UserPort = Integer[1025,49151]
